# sa-bye-jai

./: .gitignore  README.md  docker-compose.yml  nginx.conf  postgres.env.example
.claude/: settings.local.json
backend/: .dockerignore  .env.docker  .env.example  Cargo.toml  Dockerfile  entrypoint.sh
backend/migrations/: 20240101000000_initial_schema.sql  20240102000000_create_mood_tracker.sql  20240103000000_create_refresh_tokens.sql  20240104000000_create_stress_reframes.sql  20240105000000_add_mental_box_id_to_stress_reframes.sql
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/database/: connection.rs
backend/src/handlers/: auth.rs  health.rs  mental_box.rs  mod.rs  mood_tracker.rs  stress_reframe.rs  worry_window.rs
backend/src/middleware/: auth.rs
backend/src/models/: mental_box.rs  mod.rs  mood_tracker.rs  stress_reframe.rs  user.rs  worry_window.rs
backend/src/services/: auth_service.rs  mental_box_service.rs  mod.rs  openrouter_service.rs  worry_window_service.rs
backend/src/utils/: jwt.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  i18n.ts  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/pages/: DashboardPage.tsx  GroundingPage.tsx  HomePage.tsx  LoginPage.tsx  MentalBoxPage.tsx  MoodTrackerPage.tsx  RegisterPage.tsx  StressReframePage.tsx
frontend/src/services/: api.ts  auth.service.ts  mental-box.service.ts  mood-tracker.service.ts  (+1 more)
(+13 files in other folders)
